--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,10 +2,20 @@ fastapi==0.115.0
 uvicorn[standard]==0.32.1
 sqlalchemy==2.0.36
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+passlib[argon2,bcrypt]==1.7.4
 python-multipart==0.0.6
 python-dotenv==1.0.0
 pydantic==2.10.3
+pydantic-settings==2.7.0
 alembic==1.13.0
 pillow>=10.0.0
 pymysql==1.1.1
+mysqlclient==2.2.6
+email-validator>=2.0.0
+argon2-cffi==23.1.0
+google-generativeai==0.8.3
+google-auth==2.37.0
+qrcode[pil]==8.0
+reportlab==4.2.5
+requests==2.32.3
+jinja2==3.1.4
