Final backend port 8001 and API fixes for VPS

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,15 @@ build/
 # IDE
 .vscode/
 .idea/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.venv/
+venv/
+ENV/
+
+# OS
+.DS_Store
+Thumbs.db
