--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,7 +13,7 @@ pymysql==1.1.1
 mysqlclient==2.2.6
 email-validator>=2.0.0
 argon2-cffi==23.1.0
-google-generativeai==0.8.3
+openai==1.58.1
 google-auth==2.37.0
 qrcode[pil]==8.0
 reportlab==4.2.5
