--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -19,3 +19,6 @@ qrcode[pil]==8.0
 reportlab==4.2.5
 requests==2.32.3
 jinja2==3.1.4
+google-api-python-client==2.155.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
