Integrate Google Drive and Direct QR Redirect (Fixed gitignore)

--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,4 @@ server/static/uploads/
 
 # Alembic compiled files
 *.pyc
-"server/google_drive_credentials.json" 
+server/google_drive_credentials.json
